now the wall and shieldBearer has an utility